--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,12 +74,12 @@
 
     </LinearLayout>
 
-
+    <!--android:digits="aábcdeéfghiíjklmnoópqrstuúöőüűvwxyzAÁBCDEÉFGHIÍJKLMNOÓÖŐPQRSTUÚÜŰVZXY"-->
     <EditText
         android:id="@+id/input_char_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:digits="aábcdeéfghiíjklmnoópqrstuúöőüűvwxyzAÁBCDEÉFGHIÍJKLMNOÓÖŐPQRSTUÚÜŰVZXY"
+
 
 
         android:maxLength="1"
